# swaytools

./: .gitignore  README.md  pyproject.toml  setup.py  swayinfo  winfocus
swaytools/: __main__.py  floatnext.py  info.py  ipc.py  tree.py  winfocus.py
