[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swaytools"
description="Quality of life tools for sway"
readme = "README.md"
keywords = ["sway", "tools", "i3"]
license = { text = "GPL3" }
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/tmccombs/swaytools"
Issues = "https://github.com/tmccombs/swaytools/issues"

[[project.authors]]
name = "Thayne McCombs"

[[project.maintainers]]
name = "Thayne McCombs"

[project.scripts]
swayinfo = "swaytools.info:main"
winfocus = "swaytools.winfocus:main"

[tool.hatch.version]
path = "swaytools/__init__.py"

[tool.setuptools.dynamic]
version = {attr = "swaytools.__version__"}
